public/css/auth.css
.box-header
{
	font-size: 1.2em;
	font-weight: bold;
}

.form-title
{
	color: black;
	font-size: 1.5em;
	font-weight: 100;
}

.page-toggle 
{
    color: black;
    display:flex;
    align-items:center;
    justify-content:center;
    cursor: pointer;
}

.toggle-active 
{
    color: #3097D1;
}

.paginator 
{
    display:flex;
    justify-content: space-around;
}

.pages 
{
    width: 100%;
    min-height:500px;
}

.page 
{
    display: none;
}

.page-active 
{
    display: initial;
}

